fixed spacing

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -24,6 +24,7 @@
 
 .search-bar {
     border-radius: 36px;
+    background-color: #0e149f;
 }
 
 .poke-search:hover {
